--- a/Widget.html
+++ b/Widget.html
@@ -3,17 +3,17 @@
     <!-- Panel Footer -->
     <div class="HM_panelFooter">
       <div class="HM_panelLeft">
-        <span>\t \t Widget Temp</span>
+        <button class="buttonHandbook"></button>
+        <a href="https://drive.google.com/uc?authuser=0&id=1ZtIICPl8vizTtgfM9wT38P5fC9BWYPoo&export=download" download>${nls.handbook}</a>
       </div>
       <div class="HM_panelFooterContent">
-        <span>Mapa de Peligros</span>
+        <span>${nls._widgettitle}</span>
       </div>
       <div class="HM_panelRight">
-        <span>Donde esta esto?</span>
+        <span>${nls.close}</span>
+        <button class="buttonClose" data-dojo-attach-event="onClick: closeWidget"></button>
       </div>
-      <div class="HM_panelClose"></div>
     </div>
-
     <!--Panel Container -->
     <div class="panelContainer">
       <!-- Panel Incident -->
